[package]
name = "cargo-group"
version = "0.1.1"
edition = "2021"
description = "Create and Modify workspaces from the terminal"
license = "MIT"
categories = ["development-tools::cargo-plugins"]
keywords = ["cargo", "subcommand", "workspaces"]
repository = "https://github.com/PixelDoted/cargo-group"
documentation = "https://docs.rs/cargo-group"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
home = "0.5.5"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.7.6"
